logs/rovio/build.make.014.log.stderr
In file included from /home/lyw/catkin_rovio/src/rovio/src/rovio_node.cpp:40:0:
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:452:24: error: ‘Vector3d’ does not name a type
 void imuCallback(const Vector3d & acc, const Vector3d & gyro,double t_imu ){
                        ^
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:452:35: error: ISO C++ forbids declaration of ‘acc’ with no type [-fpermissive]
 void imuCallback(const Vector3d & acc, const Vector3d & gyro,double t_imu ){
                                   ^
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:452:46: error: ‘Vector3d’ does not name a type
 void imuCallback(const Vector3d & acc, const Vector3d & gyro,double t_imu ){
                                              ^
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:452:57: error: ISO C++ forbids declaration of ‘gyro’ with no type [-fpermissive]
 void imuCallback(const Vector3d & acc, const Vector3d & gyro,double t_imu ){
                                                         ^
/home/lyw/catkin_rovio/src/rovio/include/rovio/RovioNode.hpp:550:6: error: default argument missing for parameter 3 of ‘void rovio::RovioNode<FILTER>::imgCallback(const cv::Mat&, int, double)’
 void imgCallback(const cv::Mat& img, const int camID = 0, double t){
      ^
make[2]: *** [CMakeFiles/rovio.dir/src/rovio_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/rovio.dir/all] Error 2
make: *** [all] Error 2
